--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
       </section>
       <div class="map">
-        <form class="visually-hidden form-decor" enctype="multipart/form-data">
+        <form class="visually-hidden form-decor modal-show" enctype="multipart/form-data">
           <!--Здесь будет форма-->
           <!--Не могу найти способ приведения к виду макета. Варианты:
             <input type="date" value="2017-04-24">
@@ -196,12 +196,12 @@
 
             <label for="adults">взрослые:</label>
             <button class="minus" name="bminus" type="button">-</button>
-              <input class="grey-back" type="number" id="adults" value="1" min="0" max="100" step="1">
+              <input class="grey-back" type="number" name="adults" value="1" min="0" max="100" step="1">
             <button class="plus" name="bplus" type="button">+</button>
 
             <label for="child">дети:</label>
             <button class="minus" name="bminus" type="button">-</button>
-              <input class="grey-back" type="number" id="child" value="1" min="0" max="100" step="1">
+              <input class="grey-back" type="number" name="child" value="1" min="0" max="100" step="1">
             <button class="plus" name="bplus" type="button">+</button>
             
           </div>
@@ -221,10 +221,30 @@
       ТЕЛЕФОН: +7 (495) 666-02-66
     </p>
 
-    <div class="footer-social">
+    <!--<div class="footer-social">
       <a class="social-button twitter" href="https://twitter.com"></a>
       <a class="social-button facebook" href="https://facebook.com"></a>
       <a class="social-button youtube" href="https://youtube.com"></a>
+    </div>-->
+
+    <div class="footer-social">
+      <a class="social-button twitter" href="https://twitter.com">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15">
+          <path fill="#FFF" class="icon" d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/>
+        </svg>
+      </a>
+
+      <a class="social-button facebook" href="https://facebook.com">
+        <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+          <path fill="#FFF" class="icon" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
+        </svg>
+      </a>
+      
+      <a class="social-button youtube" href="https://youtube.com">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16">
+          <path fill="#FFF" class="icon" d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/>
+        </svg>
+      </a>
     </div>
 
     <p class="footer-copyright">
@@ -239,6 +259,9 @@
     </p>
   </footer>
   </div>
+
+  <script src="./js/script.js"></script>
+
 </body>
 
 </html>
