Оживляем интерактивные элементы.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <section class="lh-26px">
         <div class="welcome-banner">
           <svg xmlns="http://www.w3.org/2000/svg" width="1203" height="59" viewBox="0 0 1203 59">
-            <path fill="#FFFFFF" d="M0 0 V59 H1203 V0 L 900 29.5 V0 L 600 59 L 300 0 V29.5 L 0 0" />
+            <path fill="#FFFFFF" d="M0 0 V59 H1203 V0 L 950 25 V0 L 600 59 L 250 0 V25 L 0 0" />
           </svg>
         </div>
         <div class="declare">
@@ -53,7 +53,7 @@
               Настоящий городок
             </p>
             <div class="ordinary-text">
-              <p class="card-number">- №1 -</p>
+              <p class="card-number">— №1 —</p>
               <p>
                 Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
