Продолжаем выравнивать index

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </p>
             <div class="ordinary-text">
               <p class="card-number">— №1 —</p>
-              <p>
-                Седона — не аттракцион для туристов, там течёт своя жизнь
+              <p class="pension">
+                Седона - не аттракцион для туристов, там течёт своя жизнь
               </p>
             </div>
           </div>
@@ -63,21 +63,21 @@
         <div class="grid-item content-image">
           <img src="img/feature-picture.jpg" alt="город Седона" width="800" height="256">
         </div>
-        <div class="grid-item">
+        <div class="grid-item pictogram">
           <!--<img src="img/icon-1.svg" alt="пиктограмма домик" width="75" height="72">-->
           <p class="bold photo-card-1">жильё</p>
           <p class="ordinary-text">
             Рекомендуем пожить в настоящем мотеле, всё как в кино!
           </p>
         </div>
-        <div class="grid-item">
+        <div class="grid-item pictogram">
           <!--<img src="img/icon-3.svg" alt="пиктограмма бургер" width="74" height="70">-->
           <p class="bold photo-card-2">еда</p>
-          <p class="ordinary-text">
+          <p class="ordinary-text burger">
             Всегда заказывайте фирменный бургер, вы не разочаруетесь!
           </p>
         </div>
-        <div class="grid-item">
+        <div class="grid-item pictogram">
           <!--<img src="img/icon-2.svg" alt="пиктограмма подарок" width="64" height="76">-->
           <p class="bold  photo-card-3">сувениры</p>
           <p class="ordinary-text">
@@ -87,14 +87,14 @@
         <div class="grid-item content-image">
           <img src="img/layer-5.jpg" alt="красные скалы Седоны" width="800" height="256">
         </div>
-        <div class="font-white blue-back grid-item">
+        <div class="font-white blue-back grid-item second">
           <div class="text-card">
             <div class="bold">там есть</div>
             <div class="bold">мост дъявола</div>
             <div class="ordinary-text">
               <p class="card-number">— №2 —</p>
-              <p>
-                Да, по нему можно пройти! Если, конечно, вы осмелитесь
+              <p class="devil">
+                Да, по нему можно пройти! Если конечно вы осмелитесь
               </p>
             </div>
           </div>
