Выравниваю index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </p>
             <div class="ordinary-text">
               <p class="card-number">— №3 —</p>
-              <p>
+              <p class="sights">
                 Все достопримечательности находятся очень близко
               </p>
             </div>
@@ -119,7 +119,7 @@
             </p>
             <div class="ordinary-text">
               <p class="card-number">— №4 —</p>
-              <p>
+              <p class="from-lw">
                 Ехать в Седону из Лас-Вегаса совсем не скучно!
               </p>
             </div>
@@ -132,7 +132,7 @@
             </p>
             <div class="ordinary-text">
               <p class="card-number">— №5 —</p>
-              <p>
+              <p class="grand-canyon">
                 Большинство едет в гранд каньон и толпится там
               </p>
             </div>
