Продолжаем PP для index.html

--- a/index.html
+++ b/index.html
@@ -181,36 +181,40 @@
             </div>
           </div>
           <div class="number">
-            <label for="adults">взрослые:</label>
-            <div class="number-cover">
-              <div class="number-item">
-                <button class="minus" name="bminus" type="button">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
-                    <path fill="#cacaca" d="M0 4 H11 V7 H0 V4" />
-                  </svg>
-                </button>
-                <input class="input-back" type="number" id="adults" name="adults" value="1" min="0" max="100" step="1">
-                <button class="plus" name="bplus" type="button">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
-                    <path fill="#cacaca" d="M4 0 H7 V4 H11 V7 H7 V11 H4 V7 H0 V4 H4 V0" />
-                  </svg>
-                </button>
+            <div class="number-left">
+              <label for="adults">взрослые:</label>
+              <div class="number-cover">
+                <div class="number-item">
+                  <button class="minus" name="bminus" type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
+                      <path fill="#cacaca" d="M0 4 H11 V7 H0 V4" />
+                    </svg>
+                  </button>
+                  <input class="input-back" type="number" id="adults" name="adults" value="1" min="0" max="100" step="1">
+                  <button class="plus" name="bplus" type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
+                      <path fill="#cacaca" d="M4 0 H7 V4 H11 V7 H7 V11 H4 V7 H0 V4 H4 V0" />
+                    </svg>
+                  </button>
+                </div>
               </div>
             </div>
-            <label for="child">дети:</label>
-            <div class="number-cover">
-              <div class="number-item">
-                <button class="minus" name="bminus" type="button">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
-                    <path fill="#cacaca" d="M0 4 H11 V7 H0 V4" />
-                  </svg>
-                </button>
-                <input class="input-back" type="number" id="child" name="child" value="1" min="0" max="100" step="1">
-                <button class="plus" name="bplus" type="button">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
-                    <path fill="#cacaca" d="M4 0 H7 V4 H11 V7 H7 V11 H4 V7 H0 V4 H4 V0" />
-                  </svg>
-                </button>
+            <div class="number-right">
+              <label class="move" for="child">дети:</label>
+              <div class="number-cover">
+                <div class="number-item">
+                  <button class="minus" name="bminus" type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
+                      <path fill="#cacaca" d="M0 4 H11 V7 H0 V4" />
+                    </svg>
+                  </button>
+                  <input class="input-back" type="number" id="child" name="child" value="1" min="0" max="100" step="1">
+                  <button class="plus" name="bplus" type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
+                      <path fill="#cacaca" d="M4 0 H7 V4 H11 V7 H7 V11 H4 V7 H0 V4 H4 V0" />
+                    </svg>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
