index.html PP - всё.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class="input-cover">
             <label for="checkOut">дата выезда:</label>
             <div class="input-field">
-              <input class="input-back" id="checkOut" type="text" name="check-out-date" placeholder="7 июля 2017"
+              <input class="input-back" id="checkOut" type="text" name="check-out-date" placeholder="4 июля 2017"
                 size="17" pattern="^[а-яА-Я0-9-_\.\s]{1,16}$">
               <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
@@ -190,7 +190,7 @@
                       <path fill="#cacaca" d="M0 4 H11 V7 H0 V4" />
                     </svg>
                   </button>
-                  <input class="input-back" type="number" id="adults" name="adults" value="1" min="0" max="100" step="1">
+                  <input class="input-back" type="number" id="adults" name="adults" value="2" min="0" max="100" step="1">
                   <button class="plus" name="bplus" type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
                       <path fill="#cacaca" d="M4 0 H7 V4 H11 V7 H7 V11 H4 V7 H0 V4 H4 V0" />
@@ -208,7 +208,7 @@
                       <path fill="#cacaca" d="M0 4 H11 V7 H0 V4" />
                     </svg>
                   </button>
-                  <input class="input-back" type="number" id="child" name="child" value="1" min="0" max="100" step="1">
+                  <input class="input-back" type="number" id="child" name="child" value="0" min="0" max="100" step="1">
                   <button class="plus" name="bplus" type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
                       <path fill="#cacaca" d="M4 0 H7 V4 H11 V7 H7 V11 H4 V7 H0 V4 H4 V0" />
@@ -230,8 +230,8 @@
     <footer class="semi-transparency main-page">
       <div class="footer-contacts bold lh-26px">
         <div>#visitsedona</div>
-        <div>ТЕЛ:
-          <a class="phone" href="tel:+7(495)666-02-66">+7 (495) 666-02-66</a>
+        <div class="phone">ТЕЛ:
+          <a class="phone" href="tel:+7(495)666-01-66">+7(495) 666-01-66</a>
         </div>
       </div>
       <div class="footer-social">
@@ -256,7 +256,7 @@
         </a>
       </div>
       <p class="footer-copyright">
-        <span class="lh-26px">website by:</span>
+        <span class="lh-26px">website by</span>
         <a class="htmla-link" href="https://htmlacademy.ru/intensive/htmlcss">
           <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 113 39" width="115px" height="41px">
             <path class="htmla-cprght" fill="#fff"
