hotels.html pp -всё.

--- a/hotels.html
+++ b/hotels.html
@@ -96,7 +96,7 @@
       </div>
       <section class="catalog">
         <h2 class="not-visible">Вывод поиска</h2>
-        <ul>
+        <ul class="catalog-list">
           <!--карточка 1-->
           <li class="catalog-item">
             <a href="catalog-item.html">
@@ -202,7 +202,9 @@
     <footer class="semi-transparency">
       <div class="footer-contacts bold lh-26px">
         <div>#visitsedona</div>
-        <div><a class="phone" href="#">ТЕЛ: +7 (495) 666-02-66</a></div>
+        <div class="phone">ТЕЛ:
+          <a class="phone" href="tel:+7(495)666-01-66">+7(495) 666-01-66</a>
+        </div>
       </div>
       <div class="footer-social">
         <a class="social-button twitter" href="https://twitter.com">
