Правки по проекту

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <div class="footer-contacts bold lh-26px">
         <div>#visitsedona</div>
         <div class="phone">ТЕЛ:
-          <a class="phone" href="tel:+7(495)666-01-66">+7(495) 666-01-66</a>
+          <a class="phone" href="tel:+74956660166">+7(495) 666-01-66</a>
         </div>
       </div>
       <div class="footer-social">
